css/base.css
/*  Reset ♥
    http://meyerweb.com/eric/tools/css/reset/
    v2.0 | 20110126
    License: none (public domain)
------------------------------------------------------- */


html, body, div, span, applet, object, iframe,
h1, h2, h3, h4, h5, h6, p, blockquote, pre,
a, abbr, acronym, address, big, cite, code,
del, dfn, em, img, ins, kbd, q, s, samp,
small, strike, strong, sub, sup, tt, var,
b, u, i, center,
dl, dt, dd, ol, ul, li,
fieldset, form, label, legend,
table, caption, tbody, tfoot, thead, tr, th, td,
article, aside, canvas, details, embed,
figure, figcaption, footer, header, hgroup,
menu, nav, output, ruby, section, summary,
time, mark, audio, video {
  margin:0;
  padding:0;
  border:0;
  font-size:100%;
  font:inherit;
  vertical-align:baseline;
  }
/* HTML5 display-role reset for older browsers */
article, aside, details, figcaption, figure,
footer, header, hgroup, menu, nav, section {
  display:block;
  }
body { line-height:1; }
ol, ul { list-style:none;  }
blockquote, q { quotes:none; }
blockquote:before, blockquote:after,
q:before, q:after { content:''; content:none; }
/* tables still need 'cellspacing="0"' in the markup */
table { border-collapse: collapse; border-spacing:0; }
/* remember to define focus styles. Hee Haw */
:focus { outline:0; }

/* Inline Elements & Typography
------------------------------------------------------- */
body,
input,
textarea {
  color:#333;
  font:normal 14px/1.6667 'Helvetica Neue', Arial, sans-serif;
  -webkit-font-smoothing:antialiased;
  }

*, *:after, *:before {
  -webkit-box-sizing: border-box;
  -moz-box-sizing: border-box;
  box-sizing: border-box;
  }

h1,
h2,
h3,
h4,
h5,
h6 {
  margin:0;
  }

h1 {
  font-size:30px;
  line-height:1.25em;
  margin-bottom:20px;
  }

h2 {
  font-size:26px;
  line-height:1.25em;
  margin-bottom:20px;
  }

h3 {
  font-size:22px;
  line-height:1.5em;
  margin-bottom:20px;
  }

h4, h5 {
  font-size:15px;
  line-height:1.67em;
  margin-bottom:0;
  }

p {
  margin:0 0 20px;
  }
  p:last-child { margin-bottom:0;}

/* Links */
a {
  text-decoration:none;
  }
  a:hover {
    text-decoration:none;
    }

abbr {
  border-bottom:1px dotted #000;
  cursor:help;
  }

address { font-style:italic;}
small   { font-size:13px; line-height:1; }
strong  { font-weight:bold;}
em      { font-style:italic;}

hr {
  background:rgba(0,0,0,0.10);
  margin:0 0 20px;
  border:0;
  height:1px;
  }

/* Block Quotes */
blockquote,
q {
  quotes:none;
  font-style:italic;
  padding-left:20px;
  }

blockquote:before,
blockquote:after,
q:before,
q:after {
  content:'';
  }

/* Code Blocks & Pre */
code,
pre {
  padding:5px;
  font-family:Menlo, Bitstream Vera Sans Mono, Monaco, Consolas, monospace;
  font-size:12px;
  border-radius:3px;
  }
code {
  padding:5px;
  background:#f8f8f8;
  border:1px solid #ddd;
  }
pre {
  display:block;
  padding:10px;
  margin-bottom:10px;
  font-size:12px;
  word-break:break-all;
  word-wrap:break-word;
  white-space:pre;
  white-space:pre-wrap;
  background:#f8f8f8;
  border:1px solid #ddd;
  border-radius:3px;
  }
  pre code {
    padding:0;
    color:inherit;
    background-color:transparent;
    border:0;
    }
.pre-scrollable {
  max-height:300px;
  overflow-y:scroll;
  }

/* sub/superscripts */
sup,
sub {
  height:0;
  line-height:1;
  vertical-align:baseline;
  _vertical-align:bottom;
  position:relative;
  font-size:75%;
  }
sup {
  top:.5em;
  bottom:1em;
  }

label {
  display:block;
  }
  .options label {
    display:inline-block;
    min-width:50px;
    font-weight:normal;
    }
select,
textarea,
input[type=text] {
  display:inline-block;
  height:30px;
  width:100%;
  max-width:400px;
  /*margin-bottom:10px;*/
  font-size:13px;
  font-weight:500;
  line-height:20px;
  color:#a0a0a0;
  vertical-align:middle;
  padding:4px 6px;
  }
textarea,
input[type=text] {
  background-color:#fff;
  border:1px solid #ccc;
  }
  textarea:focus,
  input[type=text]:focus {
    outline:thin dotted\8; /* ie8 below */
    color:#404040;
    border-color:#00395D;
    border-width:1px;
    }

input.reset[type=text],
input.reset[type=text]:focus {
  background:none;
  border:none;
  padding:0 10px;
  height:30px;
  margin:0;
  }
textarea {
  height:200px;
  max-width:none;
  resize:none;
  }

input[type=submit] {
  cursor:pointer;
  border:none;
  display:inline-block;
  }
  input[type=submit]:focus,
  input[type=submit]:hover { background-color:#333; }

table {
  width:100%;
  background-color:transparent;
  border-collapse:collapse;
  border-spacing:0;
  margin-bottom:20px;
  table-layout:fixed;
  }
  th,
  td {
    padding:4px 0;
    line-height:20px;
    text-align:left;
    vertical-align:top;
    border-bottom:1px solid #d5d5d5;
    }
  th {
    font-weight:bold;
    }
  thead th {
    vertical-align:bottom;
    color:#57594D;
    }

/* Read content styling */
.prose ul {
  list-style:disc;
  margin-left:40px;
  }
.prose ol {
  list-style:decimal;
  margin-left:40px;
  }
.prose ul li,
.prose ol li {
  margin-bottom:10px;
  }
.prose p {
  margin:0 0 20px;
  }
.prose img {
  display:block;
  margin:0 auto;
  max-width:100%;
  }

/* Fixed containers
------------------------------------------------------- */
.pin-top,
.pin-right,
.pin-bottom,
.pin-left {
  position:absolute;
  }
  .pin-bottom { right:0; bottom:0; left:0; }
  .pin-top    { top:0; right:0; left:0; }
  .pin-left   { top:0; bottom:0; left:0; }
  .pin-right  { top:0; right:0; bottom:0; }

/* Columns
------------------------------------------------------- */
/*
.limiter {
  width:83.33%;
  max-width:900px;
  margin-left:auto;
  margin-right:auto;
  }
*/
.col0    { float:left; width:04.1666%; }
.col1    { float:left; width:08.3333%; }
.col2    { float:left; width:16.6666%; }
.col3    { float:left; width:25.0000%; }
.col4    { float:left; width:33.3333%; }
.col5    { float:left; width:41.6666%; }
.col6    { float:left; width:50.0000%; }
.col7    { float:left; width:58.3333%; }
.col8    { float:left; width:66.6666%; }
.col9    { float:left; width:75.0000%; }
.col10   { float:left; width:83.3333%; }
.col11   { float:left; width:91.6666%; }
.col12   { width:100%; }
.margin0  { margin-left:04.1666%; }
.margin1  { margin-left:08.3333%; }
.margin2  { margin-left:16.6666%; }
.margin3  { margin-left:25.0000%; }
.margin4  { margin-left:33.3333%; }
.margin5  { margin-left:41.6666%; }
.margin6  { margin-left:50.0000%; }
.margin7  { margin-left:58.3333%; }
.margin8  { margin-left:66.6666%; }
.margin9  { margin-left:75.0000%; }
.margin10 { margin-left:83.3333%; }
.margin11 { margin-left:91.6666%; }
.margin12 { margin-left:100.0000%; }

.row0  { height:0;}
.row1  { height:40px;}
.row2  { height:80px;}
.row3  { height:120px;}
.row4  { height:160px;}
.row5  { height:200px;}
.row6  { height:240px;}
.row7  { height:280px;}
.row8  { height:320px;}
.row9  { height:360px;}
.row10 { height:400px;}
.row11 { height:440px;}
.row12 { height:480px;}
.row13 { height:520px;}
.row14 { height:560px;}
.row15 { height:600px;}
.row16 { height:640px;}

.top0  { top:0;}
.top1  { top:40px;}
.top2  { top:80px;}
.top3  { top:120px;}
.top4  { top:160px;}
.top5  { top:200px;}
.top6  { top:240px;}
.top7  { top:280px;}
.top8  { top:320px;}
.top9  { top:360px;}
.top10 { top:400px;}
.top11 { top:440px;}
.top12 { top:480px;}
.top13 { top:520px;}
.top14 { top:560px;}
.top15 { top:600px;}
.top16 { top:640px;}

/* Padding
------------------------------------------------------- */
.pad0    { padding:5px; }
.pad1    { padding:10px; }
.pad2    { padding:20px; }
.pad4    { padding:40px; }

.pad0x { padding-left: 5px; padding-right: 5px;}
.pad1x { padding-left: 10px; padding-right: 10px;}
.pad2x { padding-left: 20px; padding-right: 20px;}
.pad4x { padding-left: 40px; padding-right: 40px;}

.pad0y { padding-top: 5px; padding-bottom: 5px;}
.pad1y { padding-top: 10px; padding-bottom: 10px;}
.pad2y { padding-top: 20px; padding-bottom: 20px;}
.pad4y { padding-top: 40px; padding-bottom: 40px;}

/* Keylines
------------------------------------------------------- */
.keyline-all    { border:1px solid rgba(0,0,0,0.20); }
.keyline-top    { border-top:1px solid rgba(0,0,0,0.20); }
.keyline-right  { border-right:1px solid rgba(0,0,0,0.20); }
.keyline-bottom { border-bottom:1px solid rgba(0,0,0,0.20); }
.keyline-left   { border-left:1px solid rgba(0,0,0,0.20); }

/* Animation
------------------------------------------------------- */
.animate {
  -webkit-transition:all .125s;
     -moz-transition:all .125s;
      -ms-transition:all .125s;
          transition:all .125s;
  }
  .button.animate {
    -webkit-transition:all .1s, background-color 0s, border-color 0s;
       -moz-transition:all .1s, background-color 0s, border-color 0s;
        -ms-transition:all .1s, background-color 0s, border-color 0s;
            transition:all .1s, background-color 0s, border-color 0s;
    }

/* Additional Utility Classes
------------------------------------------------------- */
.fr                           { float:right; }
.fl                           { float:left; }
.dot                          { border-radius:50%; }
.quiet                        { color:#7f7f7f; color: rgba(0,0,0,.5); }
.dark .quiet                  { color: #7f7f7f; color: rgba(255,255,255,.5);}
.center                       { text-align:center; }
.contain                      { position:relative; }
.clip                         { overflow:hidden; }
.hidden                       { display:none; }
.text-left                    { text-align:left; }
.text-right                   { text-align:right; }
.space > *                    { margin-right:5px; }
.space-bottom0                { margin-bottom:5px; }
.space-bottom1                { margin-bottom:10px; }
.space-bottom2, .space-bottom { margin-bottom:20px; }
.space-bottom4                { margin-bottom:40px; }
.hide-tablet, .hide-mobile    { display:block; }
.show-tablet, .show-mobile    { display:none; }
.show-mobile                  { display:none; }
img.inline, .inline           { display:inline-block; }
.block                        { display:block; }
.overflow                     { overflow:auto; }

.truncate {
  text-overflow:ellipsis;
  white-space:nowrap;
  overflow:hidden;
  }

::-webkit-scrollbar {
  height:20px;
  overflow:visible;
  width:10px;
  background:white;
  border-left:1px solid #DDD;
  }
::-webkit-scrollbar-track {
  background-clip:padding-box;
  border:solid transparent;
  border-width:0;
  }
::-webkit-scrollbar-thumb {
  background-color:rgba(0, 0, 0, 0.2);
  background-clip:padding-box;
  border:solid transparent;
  border-width:3px 3px 3px 4px;
  border-radius:6px;
  }
::-webkit-scrollbar-track:hover,
::-webkit-scrollbar-track:active {
  background-color:rgba(0, 0, 0, 0.05);
  }

/* Markup free clearing
Details: http://www.positioniseverything.net/easyclearing.html
------------------------------------------------------- */
.clearfix:after {
  content:'.';
  display:block;
  height:0;
  clear:both;
  visibility:hidden;
  }

.clearfix { display:inline-block; }

